--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ spring:
     name: claim-management
 
   datasource:
-    url: jdbc:sqlserver://tsttest.database.windows.net:1433;database=azureuser;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-    username: adminkey
-    password: Sofiaqsy1.
+    url: jdbc:sqlserver://serverbcprogrammers.database.windows.net:1433;database=demo;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+    username: adminbcp
+    password: BCProgrammers1.
     initialization-mode: always
